<resources>
    <string name="app_name">FlexTimer</string>
    <string name="flextimer">FlexTimer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="chess_clock">Chess clock</string>
    <string name="cube_timer">Cube timer</string>
    <string name="interval_training_timer">Interval training timer</string>
    <string name="focus_timer">Focus timer</string>
    <string name="todo">TODO</string>
    <string name="aboutus">About us</string>
    <string name="settings">Settings</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_intervals">Number of intervals</string>
    <string name="interval_time">Interval time</string>
    <string name="textview">TextView</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- rCube timer -->

    <string name="default_cube_time">00:00:000</string>
    <string name="chooseScramble">choose Scramble type</string>
    <string name="listTimes">list solve times</string>
    <string name="avg12">avg 12:</string>
    <string name="avg5">avg 5:  </string>
    <string name="avgAll">avg all:</string>
    <string name="bestAll">best:   </string>
    <string name="showSettings">Settings</string>
    <string name="showGraph">Show graph</string>

    <!-- rCube timer -->
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">start</string>
    <string name="reset">reset</string>

    <string name="startChess">start</string>
    <string name="title_activity_list_times">ListTimesActivity</string>
</resources>
